fix: css overflow

--- a/src/plugins/react-live/index.scss
+++ b/src/plugins/react-live/index.scss
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     display: flex;
     min-height: 100px;
+    overflow: auto;
     padding: 10px;
     width: 100%;
   }
